--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -41,7 +41,7 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
 
-    - name:
+    - name: Publish Artifacts
         uses: actions/upload-artifact@v2
         with: 
           name: artifacts
