--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -40,8 +40,7 @@ jobs:
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
-
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v2
-      with: 
-        name: artifacts
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        path: ./*/*.exe|pdb
