--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -43,4 +43,4 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
-        path: .\ # sorry no x86 build yet... coming soonTM
+        path: .\x64\Release\ # sorry no x86 build yet... coming soonTM
